add new form and refactring

--- a/login/messages/messages_en.properties
+++ b/login/messages/messages_en.properties
@@ -399,3 +399,5 @@ loggingOutImmediately=Logging you out immediately
 accountUnusable=Any subsequent use of the application will not be possible with this account
 userDeletedSuccessfully=User deleted successfully
 
+errorMessage=Error
+
