--- a/login/messages/messages_en.properties
+++ b/login/messages/messages_en.properties
@@ -288,27 +288,8 @@ confirmAccountLinking=Confirm linking the account {0} of identity provider {1} w
 confirmEmailAddressVerification=Confirm validity of e-mail address {0}.
 confirmExecutionOfActions=Perform the following action(s)
 
-locale_ca=Catal\u00E0
-locale_cs=\u010Ce\u0161tina
-locale_da=Dansk
-locale_de=Deutsch
 locale_en=English
-locale_es=Espa\u00F1ol
-locale_fr=Fran\u00E7ais
-locale_hu=Magyar
-locale_it=Italiano
-locale_ja=\u65E5\u672C\u8A9E
-locale_lt=Lietuvi\u0173
-locale_nl=Nederlands
-locale_no=Norsk
-locale_pl=Polski
-locale_pt_BR=Portugu\u00EAs (Brasil)
-locale_pt-BR=Portugu\u00EAs (Brasil)
-locale_ru=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
-locale_sk=Sloven\u010Dina
-locale_sv=Svenska
-locale_tr=T\u00FCrk\u00E7e
-locale_zh-CN=\u4E2D\u6587\u7B80\u4F53
+locale_fa=Persian
 
 backToApplication=&laquo; Back to Application
 missingParameterMessage=Missing parameters\: {0}
