--- a/login/messages/messages_en.properties
+++ b/login/messages/messages_en.properties
@@ -382,3 +382,58 @@ userDeletedSuccessfully=User deleted successfully
 
 errorMessage=Error
 
+mainTitle=Integrated authentication system
+organization=Ministry of Labor, Cooperation and Social Welfare
+login=login
+register=register
+userType=User type
+person=person
+legal=legal
+nationalCode=National Code
+userName=User name
+companyID=Company ID
+captchaText=captcha	
+changeMobileNumber=Change mobile number
+footerText=This system was developed by the Information and Communication Technology Center of the Ministry of Cooperation, Labor and Social Welfare.
+mobileNumber=mobile number
+dateOfBirth=Date of birth
+postalCode=Postal code
+captchaIsNotValid=Captcha is not valid
+userIsNotExist=User is not exist
+userIsNotEnable=User is not enable
+inquiryCompanyInfoHasError=Inquiry company info has error
+nationalCodeIsNotValid=National code is not valid
+companyIdIsNotValid=Company ID is not valid
+pleaseEnterUsername=Please enter the username
+pleaseEnterTheCaptcha=Please enter the captcha
+invalidPasswordMessage=User is not exist
+passwordIsNotValid=Password is not valid
+pleaseEnterPassword=Please enter the password
+otpIsNotValid=OTP is not valid
+sendOptMessage=The password has been sent to {0}
+resendText=Resend OTP
+userIsNotOwnerOfMobile=User is not owner of mobile
+pleaseEnterNationalCode=Please enter national code
+setPassword=Set the password
+passwordHasNotMinimumRequirement=Password has not minimum requirement
+passwordsAreNotTheSame=Passwords are not the same
+setPasswordHasError=Set password has error
+newPassword=New password
+repeatNewPassword=Repeat new password
+pleaseEnterNewPassword=Please enter the new password
+companyOwnerNationalCode=Company owner national code
+correctFormatOfMobileNumber=Correct format of mobile number
+inquiryServiceIdMatchingHasError=Inquiry service id matching has error
+inquiryCivilRegistryHasError=Inquiry civil registry has error
+inquiryPostalCodeHasError=Inquiry postal code has error
+userIsNotOwnerOfMobile2=User is not owner of mobile
+postalCodeIsNotValid=Postal code is not valid
+birthDateAndNationalCodeAreNotCorrect=Birth date and national code are not correct
+pleaseEnterCorrectPhoneNumber=Please enter correct phone number
+pleaseEnterPhoneNumber=Please enter the phone number
+pleaseEnterBirthDate=Please enter the birth date
+pleaseEnterCorrectPostalCode=Please enter correct postal code
+pleaseEnterPostalCode=Please enter the postal code
+forgetPassword=Forget Password
+pleaseEnterNumeric=Please enter numeric values only
+pleaseEnterComponyOwnerCode=Please enter compony owner national code
