--- a/login/messages/messages_fa.properties
+++ b/login/messages/messages_fa.properties
@@ -396,3 +396,58 @@ phoneNumberNotFound=عدم امکان ورود، شماره همراه شما د
 
 errorMessage=خطایی روی داد ، لطفاً دوباره اقدام کنید.
 
+mainTitle=سامانه احرازهویت یکپارچه
+organization=وزارت کار، تعاون و رفاه اجتماعی
+login=ورود
+register=ثبت نام
+userType=نوع کاربر
+person=حقیقی
+legal=حقوقی
+nationalCode=کد ملی
+userName=نام کاربری
+companyID=شناسه شرکت
+captchaText=کد امنیتی	
+changeMobileNumber=تغییر شماره تلفن همراه
+footerText=این سامانه توسط مرکز فناوری اطلاعات و ارتباطات وزارت تعاون، کار و رفاه اجتماعی توسعه داده شده است.
+mobileNumber=شماره همراه
+dateOfBirth=تاریخ تولد
+postalCode=کد پستی
+captchaIsNotValid=کد امنیتی اشتباه است
+userIsNotExist=نام کاربری یافت نشد
+userIsNotEnable=نام کاربری مورد نظر غیر فعال است
+inquiryCompanyInfoHasError=پاسخی از سرویس استعلام شرکت ها دریافت نشد
+nationalCodeIsNotValid=کد ملی وارد شده اشتباه است
+companyIdIsNotValid=شناسه شرکت وارد شده اشتباه است
+pleaseEnterUsername=لطفا نام کاربری را وارد کنید
+pleaseEnterTheCaptcha=لطفا مقادیر داخل عکس را وارد کنید
+invalidPasswordMessage=نام کاربری یافت نشد
+passwordIsNotValid=کلمه عبور اشتباه است
+pleaseEnterPassword=لطفا کلمه عبور را وارد کنید
+otpIsNotValid=کد وارد شده اشتباه است
+sendOptMessage=رمز به شماره {0} ارسال شده است
+resendText=ارسال مجدد
+userIsNotOwnerOfMobile=شماره موبایل وارد شده اشتباه است
+pleaseEnterNationalCode=لطفا کد ملی را وارد کنید
+setPassword=تنظیم رمز عبور
+passwordHasNotMinimumRequirement=رمز عبور ضعیف است
+passwordsAreNotTheSame=رمز وارد شده با تکرار آن یکسان نیست
+setPasswordHasError=عملیات با خطا مواجه شد
+newPassword=رمز عبور جدید
+repeatNewPassword=تکرار رمز عبور جدید
+pleaseEnterNewPassword=لطفا تکرار رمز عبور را وارد کنید
+companyOwnerNationalCode=کد ملی مدیر عامل شرکت
+correctFormatOfMobileNumber=فرمت صحیح شماره همراه
+inquiryServiceIdMatchingHasError=پاسخی از سرویس استعلام مالکیت شماره تلفن همراه دریافت نشد
+inquiryCivilRegistryHasError=پاسخی از سرویس استعلام ثبت احوال دریافت نشد
+inquiryPostalCodeHasError=پاسخی از سرویس استعلام کدپستی دریافت نشد
+userIsNotOwnerOfMobile2=شماره موبایل وارد شده متعلق به این کد ملی نیست
+postalCodeIsNotValid=کد پستی وارد شده اشتباه است
+birthDateAndNationalCodeAreNotCorrect=تاریخ تولد وارد شده برای این کد ملی صحیح نمی باشد
+pleaseEnterCorrectPhoneNumber=لطفا شماره همراه را به صورت صحیح وارد کنید
+pleaseEnterPhoneNumber=لطفا شماره همراه را وارد کنید
+pleaseEnterBirthDate=لطفا تاریخ تولد را وارد کنید
+pleaseEnterCorrectPostalCode=لطفا کد پستی را به صورت صحیح وارد کنید
+pleaseEnterPostalCode=لطفا کد پستی را وارد کنید
+forgetPassword=فراموشی رمز عبور
+pleaseEnterNumeric=لطفا فقط مقادیر عددی وارد کنید
+pleaseEnterComponyOwnerCode=لطفا کد ملی مدیرعامل را وارد کنید
