--- a/login/messages/messages_en.properties
+++ b/login/messages/messages_en.properties
@@ -410,7 +410,8 @@ invalidPasswordMessage=User is not exist
 passwordIsNotValid=Password is not valid
 pleaseEnterPassword=Please enter the password
 otpIsNotValid=OTP is not valid
-sendOptMessage=The password has been sent to {0}
+sendOptMessageS=The password has been sent to
+sendOptMessageE= 
 resendText=Resend OTP
 userIsNotOwnerOfMobile=User is not owner of mobile
 pleaseEnterNationalCode=Please enter national code
@@ -437,3 +438,9 @@ pleaseEnterPostalCode=Please enter the postal code
 forgetPassword=Forget Password
 pleaseEnterNumeric=Please enter numeric values only
 pleaseEnterComponyOwnerCode=Please enter compony owner national code
+checkStrongPassword1=password must be contain a minimum of
+lowerCaseLetter=1 lower case letter
+upperCaseUetter=1 upper case letter
+numericCharacter=1 numeric character
+specialCharacter=1 special character
+minimumNumberOfCharacters:minimum number of characters is 6
