--- a/login/messages/messages_fa.properties
+++ b/login/messages/messages_fa.properties
@@ -424,7 +424,8 @@ invalidPasswordMessage=نام کاربری یافت نشد
 passwordIsNotValid=کلمه عبور اشتباه است
 pleaseEnterPassword=لطفا کلمه عبور را وارد کنید
 otpIsNotValid=کد وارد شده اشتباه است
-sendOptMessage=رمز به شماره {0} ارسال شده است
+sendOptMessageS=رمز به شماره
+sendOptMessageE=ارسال شده است
 resendText=ارسال مجدد
 userIsNotOwnerOfMobile=شماره موبایل وارد شده اشتباه است
 pleaseEnterNationalCode=لطفا کد ملی را وارد کنید
@@ -451,3 +452,9 @@ pleaseEnterPostalCode=لطفا کد پستی را وارد کنید
 forgetPassword=فراموشی رمز عبور
 pleaseEnterNumeric=لطفا فقط مقادیر عددی وارد کنید
 pleaseEnterComponyOwnerCode=لطفا کد ملی مدیرعامل را وارد کنید
+checkStrongPassword1= رمز عبور باید حاوی حداقل
+lowerCaseLetter=یک حرف کوچک
+upperCaseUetter=یک حرف بزرگ
+numericCharacter=یک کاراکتر عددی
+specialCharacter=یک کاراکتر خاص
+minimumNumberOfCharacters=حداقل تعداد کاراکترها 6 عدد است
