--- a/login/messages/messages_en.properties
+++ b/login/messages/messages_en.properties
@@ -443,4 +443,5 @@ lowerCaseLetter=1 lower case letter
 upperCaseUetter=1 upper case letter
 numericCharacter=1 numeric character
 specialCharacter=1 special character
-minimumNumberOfCharacters:minimum number of characters is 6
+minimumNumberOfCharacters:minimum number of characters is {0}
+passwordIsExistInPast=Password is Exist in the past
