--- a/login/messages/messages_fa.properties
+++ b/login/messages/messages_fa.properties
@@ -457,4 +457,5 @@ lowerCaseLetter=یک حرف کوچک
 upperCaseUetter=یک حرف بزرگ
 numericCharacter=یک کاراکتر عددی
 specialCharacter=یک کاراکتر خاص
-minimumNumberOfCharacters=حداقل تعداد کاراکترها 6 عدد است
+minimumNumberOfCharacters=حداقل تعداد کاراکترها {0} عدد است
+passwordIsExistInPast=نام کلید مربوط به پسورد تکراری می باشد
