fix some minor bugs and add new features

--- a/login/messages/messages_en.properties
+++ b/login/messages/messages_en.properties
@@ -445,3 +445,4 @@ numericCharacter=1 numeric character
 specialCharacter=1 special character
 minimumNumberOfCharacters:minimum number of characters is {0}
 passwordIsExistInPast=Password is Exist in the past
+companyOwnerNationalCodeIsNotValid=Company Owner National Code Is Not Valid
