--- a/login/messages/messages_fa.properties
+++ b/login/messages/messages_fa.properties
@@ -459,3 +459,4 @@ numericCharacter=یک کاراکتر عددی
 specialCharacter=یک کاراکتر خاص
 minimumNumberOfCharacters=حداقل تعداد کاراکترها {0} عدد است
 passwordIsExistInPast=نام کلید مربوط به پسورد تکراری می باشد
+companyOwnerNationalCodeIsNotValid=کد ملی معتبر نمی باشد و یا کد ملی وارد شده متعلق به مدیرعامل نمی باشد
