refactor i18n and add search for usertype

--- a/login/messages/messages_en.properties
+++ b/login/messages/messages_en.properties
@@ -382,67 +382,68 @@ userDeletedSuccessfully=User deleted successfully
 
 errorMessage=Error
 
-mainTitle=Integrated authentication system
-organization=Ministry of Labor, Cooperation and Social Welfare
-login=login
-register=register
-userType=User type
-person=person
-legal=legal
-nationalCode=National Code
-userName=User name
-companyID=Company ID
-captchaText=captcha	
-changeMobileNumber=Change mobile number
-footerText=This system was developed by the Information and Communication Technology Center of the Ministry of Cooperation, Labor and Social Welfare.
-mobileNumber=mobile number
-dateOfBirth=Date of birth
-postalCode=Postal code
-captchaIsNotValid=Captcha is not valid
-userIsNotExist=User is not exist
-userIsNotEnable=User is not enable
-inquiryCompanyInfoHasError=Inquiry company info has error
-nationalCodeIsNotValid=National code is not valid
-companyIdIsNotValid=Company ID is not valid
-pleaseEnterUsername=Please enter the username
-pleaseEnterTheCaptcha=Please enter the captcha
-invalidPasswordMessage=User is not exist
-passwordIsNotValid=Password is not valid
-pleaseEnterPassword=Please enter the password
-otpIsNotValid=OTP is not valid
-sendOptMessageS=The password has been sent to
-sendOptMessageE= 
-resendText=Resend OTP
-userIsNotOwnerOfMobile=User is not owner of mobile
-pleaseEnterNationalCode=Please enter national code
-setPassword=Set the password
-passwordHasNotMinimumRequirement=Password has not minimum requirement
-passwordsAreNotTheSame=Passwords are not the same
-setPasswordHasError=Set password has error
-newPassword=New password
-repeatNewPassword=Repeat new password
-pleaseEnterNewPassword=Please enter the new password
-companyOwnerNationalCode=Company owner national code
-correctFormatOfMobileNumber=Correct format of mobile number
-inquiryServiceIdMatchingHasError=Inquiry service id matching has error
-inquiryCivilRegistryHasError=Inquiry civil registry has error
-inquiryPostalCodeHasError=Inquiry postal code has error
-userIsNotOwnerOfMobile2=User is not owner of mobile
-postalCodeIsNotValid=Postal code is not valid
-birthDateAndNationalCodeAreNotCorrect=Birth date and national code are not correct
-pleaseEnterCorrectPhoneNumber=Please enter correct phone number
-pleaseEnterPhoneNumber=Please enter the phone number
-pleaseEnterBirthDate=Please enter the birth date
-pleaseEnterCorrectPostalCode=Please enter correct postal code
-pleaseEnterPostalCode=Please enter the postal code
-forgetPassword=Forget Password
-pleaseEnterNumeric=Please enter numeric values only
-pleaseEnterComponyOwnerCode=Please enter compony owner national code
-checkStrongPassword1=password must be contain a minimum of
-lowerCaseLetter=1 lower case letter
-upperCaseUetter=1 upper case letter
-numericCharacter=1 numeric character
-specialCharacter=1 special character
-minimumNumberOfCharacters:minimum number of characters is {0}
-passwordIsExistInPast=Password is Exist in the past
-companyOwnerNationalCodeIsNotValid=Company Owner National Code Is Not Valid
+auth_mainTitle=Integrated authentication system
+auth_organization=Ministry of Labor, Cooperation and Social Welfare
+auth_login=login
+auth_register=register
+auth_userType=User type
+auth_person=person
+auth_legal=legal
+auth_nationalCode=National Code
+auth_userName=User name
+auth_companyID=Company ID
+auth_captchaText=captcha	
+auth_changeMobileNumber=Change mobile number
+auth_footerText=This system was developed by the Information and Communication Technology Center of the Ministry of Cooperation, Labor and Social Welfare.
+auth_mobileNumber=mobile number
+auth_dateOfBirth=Date of birth
+auth_postalCode=Postal code
+auth_captchaIsNotValid=Captcha is not valid
+auth_userIsNotExist=User is not exist
+auth_userIsNotEnable=User is not enable
+auth_inquiryCompanyInfoHasError=Inquiry company info has error
+auth_nationalCodeIsNotValid=National code is not valid
+auth_companyIdIsNotValid=Company ID is not valid
+auth_pleaseEnterUsername=Please enter the username
+auth_pleaseEnterTheCaptcha=Please enter the captcha
+auth_invalidPasswordMessage=User is not exist
+auth_passwordIsNotValid=Password is not valid
+auth_pleaseEnterPassword=Please enter the password
+auth_otpIsNotValid=OTP is not valid
+auth_sendOptMessageS=The password has been sent to
+auth_sendOptMessageE= 
+auth_resendText=Resend OTP
+auth_userIsNotOwnerOfMobile=User is not owner of mobile
+auth_pleaseEnterNationalCode=Please enter national code
+auth_setPassword=Set the password
+auth_passwordHasNotMinimumRequirement=Password has not minimum requirement
+auth_passwordsAreNotTheSame=Passwords are not the same
+auth_psetPasswordHasError=Set password has error
+auth_newPassword=New password
+auth_repeatNewPassword=Repeat new password
+auth_repeatNewPassword=Please enter the new password
+auth_companyOwnerNationalCode=Company owner national code
+auth_correctFormatOfMobileNumber=Correct format of mobile number
+auth_inquiryServiceIdMatchingHasError=Inquiry service id matching has error
+auth_inquiryCivilRegistryHasError=Inquiry civil registry has error
+auth_inquiryPostalCodeHasError=Inquiry postal code has error
+auth_userIsNotOwnerOfMobile2=User is not owner of mobile
+auth_postalCodeIsNotValid=Postal code is not valid
+auth_pbirthDateAndNationalCodeAreNotCorrect=Birth date and national code are not correct
+auth_pleaseEnterCorrectPhoneNumber=Please enter correct phone number
+auth_pleaseEnterPhoneNumber=Please enter the phone number
+auth_pleaseEnterBirthDate=Please enter the birth date
+auth_pleaseEnterCorrectPostalCode=Please enter correct postal code
+auth_pleaseEnterPostalCode=Please enter the postal code
+auth_forgetPassword=Forget Password
+auth_pleaseEnterNumeric=Please enter numeric values only
+auth_pleaseEnterComponyOwnerCode=Please enter compony owner national code
+auth_checkStrongPassword1=password must be contain a minimum of
+auth_lowerCaseLetter=1 lower case letter
+auth_upperCaseUetter=1 upper case letter
+auth_numericCharacter=1 numeric character
+auth_specialCharacter=1 special character
+auth_minimumNumberOfCharacters:minimum number of characters is {0}
+auth_passwordIsExistInPast=Password is Exist in the past
+auth_companyOwnerNationalCodeIsNotValid=Company Owner National Code Is Not Valid
+auth_backToApp=Back to Application
