--- a/login/messages/messages_fa.properties
+++ b/login/messages/messages_fa.properties
@@ -396,67 +396,68 @@ phoneNumberNotFound=عدم امکان ورود، شماره همراه شما د
 
 errorMessage=خطایی روی داد ، لطفاً دوباره اقدام کنید.
 
-mainTitle=سامانه احرازهویت یکپارچه
-organization=وزارت کار، تعاون و رفاه اجتماعی
-login=ورود
-register=ثبت نام
-userType=نوع کاربر
-person=حقیقی
-legal=حقوقی
-nationalCode=کد ملی
-userName=نام کاربری
-companyID=شناسه شرکت
-captchaText=کد امنیتی	
-changeMobileNumber=تغییر شماره تلفن همراه
-footerText=این سامانه توسط مرکز فناوری اطلاعات و ارتباطات وزارت تعاون، کار و رفاه اجتماعی توسعه داده شده است.
-mobileNumber=شماره همراه
-dateOfBirth=تاریخ تولد
-postalCode=کد پستی
-captchaIsNotValid=کد امنیتی اشتباه است
-userIsNotExist=نام کاربری یافت نشد
-userIsNotEnable=نام کاربری مورد نظر غیر فعال است
-inquiryCompanyInfoHasError=پاسخی از سرویس استعلام شرکت ها دریافت نشد
-nationalCodeIsNotValid=کد ملی وارد شده اشتباه است
-companyIdIsNotValid=شناسه شرکت وارد شده اشتباه است
-pleaseEnterUsername=لطفا نام کاربری را وارد کنید
-pleaseEnterTheCaptcha=لطفا مقادیر داخل عکس را وارد کنید
-invalidPasswordMessage=نام کاربری یافت نشد
-passwordIsNotValid=کلمه عبور اشتباه است
-pleaseEnterPassword=لطفا کلمه عبور را وارد کنید
-otpIsNotValid=کد وارد شده اشتباه است
-sendOptMessageS=رمز به شماره
-sendOptMessageE=ارسال شده است
-resendText=ارسال مجدد
-userIsNotOwnerOfMobile=شماره موبایل وارد شده اشتباه است
-pleaseEnterNationalCode=لطفا کد ملی را وارد کنید
-setPassword=تنظیم رمز عبور
-passwordHasNotMinimumRequirement=رمز عبور ضعیف است
-passwordsAreNotTheSame=رمز وارد شده با تکرار آن یکسان نیست
-setPasswordHasError=عملیات با خطا مواجه شد
-newPassword=رمز عبور جدید
-repeatNewPassword=تکرار رمز عبور جدید
-pleaseEnterNewPassword=لطفا تکرار رمز عبور را وارد کنید
-companyOwnerNationalCode=کد ملی مدیر عامل شرکت
-correctFormatOfMobileNumber=فرمت صحیح شماره همراه
-inquiryServiceIdMatchingHasError=پاسخی از سرویس استعلام مالکیت شماره تلفن همراه دریافت نشد
-inquiryCivilRegistryHasError=پاسخی از سرویس استعلام ثبت احوال دریافت نشد
-inquiryPostalCodeHasError=پاسخی از سرویس استعلام کدپستی دریافت نشد
-userIsNotOwnerOfMobile2=شماره موبایل وارد شده متعلق به این کد ملی نیست
-postalCodeIsNotValid=کد پستی وارد شده اشتباه است
-birthDateAndNationalCodeAreNotCorrect=تاریخ تولد وارد شده برای این کد ملی صحیح نمی باشد
-pleaseEnterCorrectPhoneNumber=لطفا شماره همراه را به صورت صحیح وارد کنید
-pleaseEnterPhoneNumber=لطفا شماره همراه را وارد کنید
-pleaseEnterBirthDate=لطفا تاریخ تولد را وارد کنید
-pleaseEnterCorrectPostalCode=لطفا کد پستی را به صورت صحیح وارد کنید
-pleaseEnterPostalCode=لطفا کد پستی را وارد کنید
-forgetPassword=فراموشی رمز عبور
-pleaseEnterNumeric=لطفا فقط مقادیر عددی وارد کنید
-pleaseEnterComponyOwnerCode=لطفا کد ملی مدیرعامل را وارد کنید
-checkStrongPassword1= رمز عبور باید حاوی حداقل
-lowerCaseLetter=یک حرف کوچک
-upperCaseUetter=یک حرف بزرگ
-numericCharacter=یک کاراکتر عددی
-specialCharacter=یک کاراکتر خاص
-minimumNumberOfCharacters=حداقل تعداد کاراکترها {0} عدد است
-passwordIsExistInPast=نام کلید مربوط به پسورد تکراری می باشد
-companyOwnerNationalCodeIsNotValid=کد ملی معتبر نمی باشد و یا کد ملی وارد شده متعلق به مدیرعامل نمی باشد
+auth_mainTitle=سامانه احرازهویت یکپارچه
+auth_organization=وزارت کار، تعاون و رفاه اجتماعی
+auth_login=ورود
+auth_register=ثبت نام
+auth_userType=نوع کاربر
+auth_person=حقیقی
+auth_legal=حقوقی
+auth_nationalCode=کد ملی
+auth_userName=نام کاربری
+auth_companyID=شناسه شرکت
+auth_captchaText=کد امنیتی	
+auth_changeMobileNumber=تغییر شماره تلفن همراه
+auth_footerText=این سامانه توسط مرکز فناوری اطلاعات و ارتباطات وزارت تعاون، کار و رفاه اجتماعی توسعه داده شده است.
+auth_mobileNumber=شماره همراه
+auth_dateOfBirth=تاریخ تولد
+auth_postalCode=کد پستی
+auth_captchaIsNotValid=کد امنیتی اشتباه است
+auth_userIsNotExist=نام کاربری یافت نشد
+auth_userIsNotEnable=نام کاربری مورد نظر غیر فعال است
+auth_inquiryCompanyInfoHasError=پاسخی از سرویس استعلام شرکت ها دریافت نشد
+auth_nationalCodeIsNotValid=کد ملی وارد شده اشتباه است
+auth_companyIdIsNotValid=شناسه شرکت وارد شده اشتباه است
+auth_pleaseEnterUsername=لطفا نام کاربری را وارد کنید
+auth_pleaseEnterTheCaptcha=لطفا مقادیر داخل عکس را وارد کنید
+auth_invalidPasswordMessage=نام کاربری یافت نشد
+auth_passwordIsNotValid=کلمه عبور اشتباه است
+auth_pleaseEnterPassword=لطفا کلمه عبور را وارد کنید
+auth_otpIsNotValid=کد وارد شده اشتباه است
+auth_sendOptMessageS=رمز به شماره
+auth_sendOptMessageE=ارسال شده است
+auth_resendText=ارسال مجدد
+auth_userIsNotOwnerOfMobile=شماره موبایل وارد شده اشتباه است
+auth_pleaseEnterNationalCode=لطفا کد ملی را وارد کنید
+auth_setPassword=تنظیم رمز عبور
+auth_passwordHasNotMinimumRequirement=رمز عبور ضعیف است
+auth_passwordsAreNotTheSame=رمز وارد شده با تکرار آن یکسان نیست
+auth_psetPasswordHasError=عملیات با خطا مواجه شد
+auth_newPassword=رمز عبور جدید
+auth_repeatNewPassword=تکرار رمز عبور جدید
+auth_repeatNewPassword=لطفا تکرار رمز عبور را وارد کنید
+auth_companyOwnerNationalCode=کد ملی مدیر عامل شرکت
+auth_correctFormatOfMobileNumber=فرمت صحیح شماره همراه
+auth_inquiryServiceIdMatchingHasError=پاسخی از سرویس استعلام مالکیت شماره تلفن همراه دریافت نشد
+auth_inquiryCivilRegistryHasError=پاسخی از سرویس استعلام ثبت احوال دریافت نشد
+auth_inquiryPostalCodeHasError=پاسخی از سرویس استعلام کدپستی دریافت نشد
+auth_userIsNotOwnerOfMobile2=شماره موبایل وارد شده متعلق به این کد ملی نیست
+auth_postalCodeIsNotValid=کد پستی وارد شده اشتباه است
+auth_pbirthDateAndNationalCodeAreNotCorrect=تاریخ تولد وارد شده برای این کد ملی صحیح نمی باشد
+auth_pleaseEnterCorrectPhoneNumber=لطفا شماره همراه را به صورت صحیح وارد کنید
+auth_pleaseEnterPhoneNumber=لطفا شماره همراه را وارد کنید
+auth_pleaseEnterBirthDate=لطفا تاریخ تولد را وارد کنید
+auth_pleaseEnterCorrectPostalCode=لطفا کد پستی را به صورت صحیح وارد کنید
+auth_pleaseEnterPostalCode=لطفا کد پستی را وارد کنید
+auth_forgetPassword=فراموشی رمز عبور
+auth_pleaseEnterNumeric=لطفا فقط مقادیر عددی وارد کنید
+auth_pleaseEnterComponyOwnerCode=لطفا کد ملی مدیرعامل را وارد کنید
+auth_checkStrongPassword1= رمز عبور باید حاوی حداقل
+auth_lowerCaseLetter=یک حرف کوچک
+auth_upperCaseUetter=یک حرف بزرگ
+auth_numericCharacter=یک کاراکتر عددی
+auth_specialCharacter=یک کاراکتر خاص
+auth_minimumNumberOfCharacters=حداقل تعداد کاراکترها {0} عدد است
+auth_passwordIsExistInPast=نام کلید مربوط به پسورد تکراری می باشد
+auth_companyOwnerNationalCodeIsNotValid=کد ملی معتبر نمی باشد و یا کد ملی وارد شده متعلق به مدیرعامل نمی باشد
+auth_backToApp=بازگشت به سامانه
