update password-update page, fix datepicker select month and year, add auto focous

--- a/login/messages/messages_en.properties
+++ b/login/messages/messages_en.properties
@@ -447,3 +447,5 @@ auth_minimumNumberOfCharacters:minimum number of characters is {0}
 auth_passwordIsExistInPast=Password is Exist in the past
 auth_companyOwnerNationalCodeIsNotValid=Company Owner National Code Is Not Valid
 auth_backToApp=Back to Application
+auth_rememberMe=Remember me
+
