--- a/login/messages/messages_fa.properties
+++ b/login/messages/messages_fa.properties
@@ -63,7 +63,7 @@ lastName=نام خانوادگی
 familyName=نام خانوادگی
 email=نام کاربری
 password=رمز عبور
-passwordConfirm=رمز رمز
+passwordConfirm=تایید رمز جدید
 passwordNew=رمز جدید
 passwordNewConfirm=تایید رمز جدید
 rememberMe=من را به خاطر داشته باش
@@ -461,3 +461,4 @@ auth_minimumNumberOfCharacters=حداقل تعداد کاراکترها {0} عد
 auth_passwordIsExistInPast=نام کلید مربوط به پسورد تکراری می باشد
 auth_companyOwnerNationalCodeIsNotValid=کد ملی معتبر نمی باشد و یا کد ملی وارد شده متعلق به مدیرعامل نمی باشد
 auth_backToApp=بازگشت به سامانه
+auth_rememberMe=من را به خاطر داشته باش
